@@ -1,4 +1,11 @@
 #!/bin/sh
 
-java -Xmx4G -Xms4G -Xmn2G -jar ./carrying-client/target/carrying-client-jar-with-dependencies.jar ${1} ${2} ./carrying-client/carrying-client.properties
+java \
+    -XX:+UseBiasedLocking\
+    -XX:+UseSpinning\
+    -XX:PreBlockSpin=10
+    -Xmx4G \
+    -Xms4G \
+    -Xmn2G \
+    -jar ./carrying-client/target/carrying-client-jar-with-dependencies.jar ${1} ${2} ./carrying-client/carrying-client.properties
 
